--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <figure id="figure">
-    <i class="box"></i>
+  <figure class="box">
+    <i class="side front"></i>
+    <i class="side back"></i>
   </figure>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
